2007-07-18  Corinna Vinschen  <corinna@vinschen.de>

	* include/winnt.h (SE_TRUSTED_CREDMAN_ACCESS_NAME): Define.

2007-07-17  Corinna Vinschen  <corinna@vinschen.de>

	* include/winnt.h (FILE_READ_ONLY_VOLUME): Define.
	* include/ddk/ntifs.h (FILE_READ_ONLY_VOLUME): Define.

2007-07-12  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/winuser.h (FE_FONTSMOOTHINGSTANDARD, FE_FONTSMOOTHINGCLEARTYPE):
	Define.

2007-07-12  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/pbt.h (PBT_APMRESUMEAUTOMATIC) Define.
	* include/winuser.h: (PBT_APMQUERYSUSPEND, PBT_APMQUERYSTANDBY,
	PBT_APMQUERYSUSPENDFAILED, PBT_APMQUERYSTANDBYFAILED,
	PBT_APMSUSPEND, PBT_APMSTANDBY, PBT_APMRESUMECRITICAL,
	PBT_APMRESUMESUSPEND, PBT_APMRESUMESTANDBY, PBT_APMBATTERYLOW,
	PBT_APMPOWERSTATUSCHANGE, PBT_APMOEMEVENT, PBT_APMRESUMEAUTOMATIC):
	Sync with include/pbt.h.

2007-07-12  Danny Smith  <dannysmith@users.sourceforge.net>

	[mingw-Bugs-1751518]
	* include/mshtml.h (IHTMLDocument2): Correct spelling of put_URL,
	get_URL.

	[mingw-Bugs-1751565]
	* include/basetyps.h (IID); Guard with __IID_DEFINED__.

	[mingw-Bugs-1751595] 
	* include/exdisp.h (DWebBrowserEvents2): Remove undocumented STDDISP
	methods.

	Thanks to Yuji Kuwabara  <yujikuwabara at sf dot net>.

2007-07-10  Danny Smith  <dannysmith@users.sourceforge.net>

	[mingw-Bugs-1750898]
	* include/mmsystem.h (MIXERCONTROL): Correct UNICODE mapping.
	Thanks to Yuji Kuwabara  <yujikuwabara at sf dot net>.

2007-07-09  Danny Smith  <dannysmith@users.sourceforge.net>

	[mingw-Bugs-1749305]
	* lib/kernel32.def (GetConsoleProcessList@8):  Add export. 

2007-07-02  Przemek Czerkas  <pczerkas@gmail.com>

	* include/shlobj.h: Add CSIDL_MYMUSIC and CSIDL_MYVIDEO.

2007-07-02  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/oaidl.h: Include windows.h and ole2.h,
	unless COM_NO_WINDOWS_H.

	[mingw-Bugs-1742130]
	* include/oaidl.h (struct tagVARIANT): Add union members
	LONGLONG  * pllVal and ULONGLONG * pullVal.
